Version 18.6 fixed the add button of banners in GeneralSettingsTable component, fixed the image display at SearchResultsPanel component, fixed the wierd horizontal white space when switching to arabic langauge inside GeneralSettingsTable component

--- a/src/styles/components/SearchResultsPanel.scss
+++ b/src/styles/components/SearchResultsPanel.scss
@@ -201,8 +201,11 @@
           grid-area: img;
           width: 100%;
           aspect-ratio: 1 / 1;
-          border-radius: 2em;
+          background-color: white;
+          object-fit: contain;
+          object-position: center;
           margin-block: auto;
+          border-radius: 2em;
         }
   
         &__title {
